fix: dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,11 +23,10 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
+body{
+  @apply bg-purple-200 text-purple-950;
 }
 
 .dark body {
-    @apply bg-gray-950 text-purple-900;
+  @apply bg-gray-950 text-gray-100;
 }
